# redis-limpyd-extensions

./: .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  documentup.json  requirements.txt  run_tests.py  setup.cfg  setup.py
limpyd_extensions/: __init__.py  related.py
limpyd_extensions/dynamic/: __init__.py  collection.py  fields.py  model.py  related.py
tests/: base.py  related.py
tests/dynamic/: fields.py  related.py
